# boursoscrap

./: Cargo.toml  Dockerfile  Makefile
.github/workflows/: docker-image.yml
src/: main.rs
src/bourso_scrap/: error.rs  mod.rs  scrap.rs
